# Simulator

./: .envrc  .gitignore  README.md  frames.gv  justfile  pyproject.toml
YOLOv5-traffic/: traffic.yaml
YOLOv5-traffic/labels/: train.cache  val.cache
YOLOv5-traffic/labels/train/: frame_00046.txt  frame_00049.txt  frame_00139.txt  frame_00140.txt  frame_00159.txt  frame_00160.txt  frame_00162.txt  frame_00165.txt  frame_00176.txt  frame_00178.txt  frame_00179.txt  frame_00182.txt  frame_00183.txt  frame_00207.txt  frame_00209.txt  frame_00210.txt  frame_00212.txt  frame_00223.txt  frame_00247.txt  frame_00261.txt  frame_00272.txt  frame_00314.txt  frame_00316.txt  frame_00324.txt  frame_00326.txt  frame_00355.txt  frame_00356.txt  frame_00359.txt  frame_00360.txt  frame_00363.txt  frame_00370.txt  frame_00415.txt  frame_00425.txt  frame_00427.txt  frame_00448.txt  frame_00452.txt  frame_00476.txt  frame_00479.txt  frame_00481.txt  frame_00483.txt  (+6 more)
YOLOv5-traffic/labels/val/: frame_00174.txt  frame_00181.txt  frame_00199.txt  frame_00221.txt  frame_00252.txt  frame_00269.txt  frame_00279.txt  frame_00312.txt  frame_00361.txt  frame_00421.txt  frame_00426.txt  frame_00451.txt  frame_00475.txt  frame_00480.txt  frame_00501.txt  frame_00577.txt
frames/: classes.txt  frame_00048.txt  frame_00066.txt  frame_00067.txt  frame_00073.txt  frame_00125.txt  frame_00154.txt  frame_00180.txt  frame_00184.txt  frame_00185.txt  frame_00213.txt  frame_00214.txt  frame_00215.txt  frame_00219.txt  frame_00220.txt  frame_00222.txt  frame_00237.txt  frame_00260.txt  frame_00265.txt  frame_00267.txt  frame_00271.txt  frame_00276.txt  frame_00278.txt  frame_00281.txt  frame_00282.txt  frame_00283.txt  frame_00284.txt  frame_00319.txt  frame_00321.txt  frame_00322.txt  frame_00323.txt  frame_00325.txt  frame_00327.txt  frame_00328.txt  frame_00329.txt  frame_00330.txt  frame_00335.txt  frame_00349.txt  frame_00365.txt  frame_00422.txt  (+14 more)
src/example/: CMakeLists.txt  package.xml  setup.py
src/example/config/: ekf_localization.yaml
src/example/example/: camera.py  control.py
src/example/src/: camera.py  control.py  cv.py  ekf_fusion_node.cpp  ground_truth.py  publish_track_mesh.py  sign_detector_node.py  yolo_sign_detection.py
src/models_pkg/: CMakeLists.txt  package.xml
src/models_pkg/cam_birdeye_REC/: model.sdf
src/models_pkg/camera_follow/: model.sdf
src/models_pkg/rcCar_assembly/: model.sdf  model.urdf
src/models_pkg/rcCar_assembly_REC/: model.sdf
src/models_pkg/track/materials/textures/: track_map.yaml
src/plugins_pkgs/bno055_plugin/: CMakeLists.txt  package.xml
src/plugins_pkgs/bno055_plugin/include/: bno055_plugin.hpp
src/plugins_pkgs/bno055_plugin/src/: bno055_plugin.cpp
src/plugins_pkgs/car_plugin/: CMakeLists.txt  package.xml
src/plugins_pkgs/car_plugin/include/: carlikerobot.hpp  carlikerobot_ros_plugin.hpp
src/plugins_pkgs/car_plugin/src/: carlikerobot.cpp  carlikerobot_ros_plugin.cpp
src/plugins_pkgs/gps_plugin/: CMakeLists.txt  package.xml
src/plugins_pkgs/gps_plugin/include/: gps_plugin.hpp
src/plugins_pkgs/gps_plugin/src/: gps_plugin.cpp
src/plugins_pkgs/pedestrian_object_plugin/: CMakeLists.txt  package.xml
src/plugins_pkgs/pedestrian_object_plugin/include/: pedestrian_object_plugin.h
src/plugins_pkgs/traffic_light_plugin/: CMakeLists.txt  package.xml
src/plugins_pkgs/traffic_light_plugin/include/: traffic_light_plugin.hpp
src/plugins_pkgs/traffic_light_plugin/src/: traffic_light_plugin.cpp
src/plugins_pkgs/wheel_encoder_plugin/: CMakeLists.txt  package.xml
src/plugins_pkgs/wheel_encoder_plugin/include/: wheel_encoder_plugin.hpp
src/plugins_pkgs/wheel_encoder_plugin/src/: wheel_encoder.cpp  wheel_encoder_plugin.cpp
src/sim_pkg/: CMakeLists.txt  package.xml
src/sim_pkg/launch/: all_objects.launch  gazebo.launch  map_with_all_objects.launch  map_with_all_objects_REC.launch  map_with_car.launch  map_with_car_REC.launch
src/sim_pkg/launch/bash_scripts/: KOUMEKATRONOM.rviz  rviz.sh
src/sim_pkg/launch/sublaunchers/: car.launch  car_REC.launch  crosswalk_signs.launch  enter_highway_signs.launch  leave_highway_signs.launch  members.launch  obstacle_car.launch  oneway_signs.launch  parking_signs.launch  pedestrian_objects.launch  priority_signs.launch  prohibited_signs.launch  ramp.launch  roadblock.launch  roundabout_signs.launch  stop_signs.launch  traffic_lights.launch
src/sim_pkg/worlds/: world.world
src/traffic_light_pkg/: package.xml  setup.cfg  setup.py
src/traffic_light_pkg/src/: tl_talker.py
src/traffic_light_pkg/traffic_light_pkg/: tl_talker.py
src/utils/: CMakeLists.txt  package.xml  rviz.rviz
src/utils/msg/: IMU.msg  Localisation.msg
