[tool.poetry]
name = "sim"
version = "0.1.0"
description = ""
authors = ["Sheheryar Parvaz <me@cherryman.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.1.78"
pynput = "^1.7.6"
empy = "<4.0"
catkin-pkg = "^1.0.0"
lark = "^1.1.8"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
