<?xml version="1.0"?>

<package format="2">

  <name>sim_pkg</name>
  <version>1.0.0</version>
  <description>The sim_pkg package</description>
  <maintainer email="rares.lemnariu@ro.bosch.com"> Rares Lemnariu </maintainer>
  <license>Bosch ECC</license>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2run</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
